--- a/room.html
+++ b/room.html
@@ -37,18 +37,33 @@
         // localStorage.setItem('dusterCheck', '0');
 
         let room;
-        let duster, sodaPile, laundryPile, hamper;
+        let duster, soda, laundry, hamper;
         let dust = [];
         let num = 4;
         let refScale;
+
+        let dustLeft;
+        let dustRight;
+        let dustTop;
+        let dustBottom;
+
+        let dusterLeft;
+        let dusterRight;
+        let dusterTop;
+        let dusterBottom;
+
+        let hamperLeft;
+        let hamperRight;
+        let hamperTop;
+        let hamperBottom;
 
         // Preload all images
         function preload() {
             room = loadImage('sprites/room/room.png');
             duster = loadImage('sprites/room/dusterIRL.png');
             hamper = loadImage('sprites/room/hamperIRL.png');
-            sodaPile = loadImage('sprites/room/sodaPile.png');
-            laundryPile = loadImage('sprites/room/laundryPile.png');
+            soda = loadImage('sprites/room/sodaPile.png');
+            laundry = loadImage('sprites/room/laundryPile.png');
             for (let i = 0; i < num; i++) {
                 dust.push(loadImage('sprites/room/dust.png'));
             }
@@ -61,8 +76,9 @@
             let canvasY = (windowHeight / 2) - (room.height / 2) * refScale;
             width = room.width * refScale;
             height = room.height * refScale;
+            calculatePositions();
 
-            canvas = createCanvas(width, height);
+            canvas = createCanvas(width, height).attribute('willReadFrequently', true);
             canvas.position(canvasX, canvasY);
         }
 
@@ -72,60 +88,103 @@
             let canvasY = (windowHeight / 2) - (room.height / 2) * refScale;
             width = room.width * refScale;
             height = room.height * refScale;
-
             resizeCanvas(width, height);
+            calculatePositions();
             canvas.position(canvasX, canvasY);
+        }
+
+        function calculatePositions() {
+            dusterX = -90 * refScale;
+            dusterY = -170 * refScale;
+            dusterWidth = duster.width / 3.4 * refScale;
+            dusterHeight = duster.height / 3.4 * refScale;
+            dusterLeft = width - refScale * 150;
+            dusterRight = width;
+            dusterTop = height - 400 * refScale;
+            dusterBottom = height - 400 * refScale + 280 * refScale;
+
+            dustWidth = dust[0].width / 4.4 * refScale;
+            dustHeight = dust[0].height / 3 * refScale;
+            dustLeft = 0;
+            dustRight = dust[0].width / 4.4 * refScale;
+            dustTop = 150 * refScale;
+            dustBottom = 150 * refScale + 3 * 135 * refScale + dust[0].height / 3 * refScale;
+
+            hamperWidth = hamper.width / 2.4 * refScale;
+            hamperHeight = hamper.height / 2.4 * refScale;
+            hamperLeft = 50 * refScale;
+            hamperRight = 50 * refScale + hamper.width / 2.4 * refScale;
+            hamperTop = height - 210 * refScale;
+            hamperBottom = height;
+
+            sodaWidth = soda.width / 3.5 * refScale;
+            sodaHeight = soda.height / 3.5 * refScale;
+            sodaLeft = width - 550 * refScale;
+            // sodaRight = 50 * refScale + hamper.width / 2.4 * refScale;
+            sodaTop = height - 340 * refScale;
+            // sodaBottom = height;
+
+            laundryWidth = laundry.width / 2.7 * refScale;
+            laundryHeight = laundry.height / 2.7 * refScale;
+            laundryLeft = 450 * refScale;
+            // laundryRight = 50 * refScale + hamper.width / 2.4 * refScale;
+            laundryTop = height - 400 * refScale;
+            // laundryBottom = height;
         }
 
         function draw() {
             clear();
             background(room); // set the background every frame
 
+            let mouseOverDuster = mouseX >= dusterLeft && mouseX <= dusterRight && mouseY >= dusterTop && mouseY <= dusterBottom;
+            let mouseOverDust = mouseX >= dustLeft && mouseX <= dustRight && mouseY >= dustTop && mouseY <= dustBottom;
+
+            if (dusterCheck === '0') {
+                if (mouseX >= dusterLeft && mouseX <= dusterRight && mouseY >= dusterTop && mouseY <= dusterBottom) {
+                    tint(192, 255, 172);
+                }
+            }
             // Transformations and drawing scaled images
             push();
             translate(width / 2 + 680 * refScale, height / 2 + 180 * refScale);
             rotate(PI * 1.1);
-            image(duster, -90 * refScale, -170 * refScale, duster.width / 3.4 * refScale, duster.height / 3.4 * refScale);
+            image(duster, dusterX, dusterY, dusterWidth, dusterHeight);
             pop();
             // square(width - refScale * 150, height - 700 * refScale, 150 * refScale);
+            tint('none');
+            image(soda, sodaLeft, sodaTop, sodaWidth, sodaHeight);
+            image(laundry, laundryLeft, laundryTop, laundryWidth, laundryHeight);
+            image(hamper, hamperLeft, hamperTop, hamperWidth, hamperHeight);
 
-            image(sodaPile, width - 550 * refScale, height - 340 * refScale, sodaPile.width / 3.5 * refScale, sodaPile.height / 3.5 * refScale);
-            image(laundryPile, 450 * refScale, height - 400 * refScale, laundryPile.width / 2.7 * refScale, laundryPile.height / 2.7 * refScale);
-            image(hamper, 50 * refScale, height - 210 * refScale, hamper.width / 2.4 * refScale, hamper.height / 2.4 * refScale);
-
-            for (let i = 0; i < num; i++) {
-                image(dust[i], -5, 150 * refScale + i * 135 * refScale, dust[i].width / 4.4 * refScale, dust[i].height / 3 * refScale);
+            if (dusterCheck != '2') {
+                if (mouseX >= dustLeft && mouseX <= dustRight && mouseY >= dustTop && mouseY <= dustBottom) {
+                    tint(192, 255, 172);
+                }
+                for (let i = 0; i < num; i++) {
+                    image(dust[i], -5, dustTop + i * 135 * refScale, dustWidth, dustHeight);
+                }
+                tint('none');
             }
+
+            // Set cursor
+            cursor(mouseOverDust || mouseOverDuster ? HAND : ARROW);
         }
 
         // Update clickable areas or interactions based on scale
         function mouseClicked() {
             if (dusterCheck != '2') {
-                dustLeft = 0;
-                dustRight = dust[0].width / 4.4 * refScale;
-                dustTop = 150 * refScale;
-                dustBottom = 150 * refScale + 3 * 135 * refScale + dust[0].height / 3 * refScale;
-
                 if (mouseX >= dustLeft && mouseX <= dustRight && mouseY >= dustTop && mouseY <= dustBottom) {
                     window.location.href = 'dust.html';
                 }
             }
 
             if (dusterCheck === '0') {
-                dusterLeft = width - refScale * 150;
-                dusterRight = width;
-                dusterTop = height - 400 * refScale;
-                dusterBottom = height - 400 * refScale + 280 * refScale;
                 if (mouseX >= dusterLeft && mouseX <= dusterRight && mouseY >= dusterTop && mouseY <= dusterBottom) {
                     window.location.href = 'duster.html';
                 }
             }
 
             if (hamperCheck === '0') {
-                hamperLeft = 50 * refScale;
-                hamperRight = 50 * refScale + hamper.width / 2.4 * refScale;
-                hamperTop = height - 210 * refScale;
-                hamperBottom = height;
                 if (mouseX >= hamperLeft && mouseX <= hamperRight && mouseY >= hamperTop && mouseY <= hamperBottom) {
                     window.location.href = 'hamper.html';
                 }
